# scene_manager

./: CMakeLists.txt  README.md  package.xml
config/: objects_config.yaml  robot_config.yaml
include/scene_manager/: object_builder.h  scene_manager.h
launch/: scene_manager_node.launch
src/: object_builder.cpp  scene_manager.cpp  scene_manager_node.cpp
